# evdi-control

./: CMakeLists.txt  README.md
include/: display_backend.h  edid.h  evdi_loader.h  modeline.h  state_file.h  util.h
src/: display_backend.cpp  edid.cpp  evdi_loader.cpp  main.cpp  modeline.cpp  state_file.cpp  util.cpp
